@@ -3,6 +3,7 @@ trunk
 * checked observed data for dimnames on ML objective functions
 * using dimnames= argument to mxMLObjective() and mxFIMLObjective()
   propagates to MxMatrix objects on output.
+* bug fix for error message where model name is incorrect
 
 Release 0.2.0-905
 =================
